--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <script src="index.ts"></script>
+    <button class="button">Click</button>
+    <script src="../ts/index.ts"></script>
   </body>
 </html>
